--- a/node/package.json
+++ b/node/package.json
@@ -4,7 +4,8 @@
   "description": "Node server for react-ajax",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+	"dev:server": "nodemon -L index.js"
   },
   "repository": {
     "type": "git",
