--- a/node/package.json
+++ b/node/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	"dev:server": "nodemon -L index.js"
+    "dev:server": "nodemon -L index.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/QuentinMcCarthy/react-ajax#readme",
   "dependencies": {
+    "cors": "^2.8.4",
     "express": "^4.16.3"
   }
 }
